<resources>
    <string name="app_name">BookReview</string>
    <string name="book_item_image_desc">Book cover</string>
    <string name="error_get_books">Error retrieving data from server!</string>
    <string name="error_get_reviews">Error retrieving data from server!</string>
    <string name="action_filter">Filter</string>
    <string name="action_add_review">Add Review</string>
    <string name="error_server">Server error!</string>
    <string name="scan_qr_code_instruction">Use the client app to scan the QR code</string>
    <string name="qr_code_desc">QR code</string>
    <string name="btn_cancel">Cancel</string>
    <string name="action_refresh_book_reviews">se.chalmers.bookreview.action_refresh_book_reviews</string>
    <string name="action_refresh">Refresh</string>
    <string name="dialog_title_sort_option">Select sort option</string>
    <string name="sort_option_default">Default Order</string>
    <string name="sort_order_title">Book Title</string>
    <string name="sort_order_rating">Book Rating</string>
    <string name="search_widget_title">Search</string>
</resources>
