<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_code_instruction"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/iv_qr_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/qr_code_desc"
        android:scaleType="fitCenter" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel" />
</LinearLayout>